--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
     <div class="content">
       <p id="tiktokText"></p>
-      <a class="open-btn" href="https://www.tiktok.com" target="_blank">Acessar TikTok</a>
+      <a class="open-btn" href="https://www.tiktok.com/@jotap_g" target="_blank">Acessar TikTok</a>
     </div>
 
     <!-- Instagram -->
@@ -294,7 +294,7 @@
     </div>
     <div class="content">
       <p id="igText"></p>
-      <a class="open-btn" href="https://www.instagram.com" target="_blank">Acessar Instagram</a>
+      <a class="open-btn" href="https://www.instagram.com/gomes.jpeg_/" target="_blank">Acessar Instagram</a>
     </div>
 
     <!-- YouTube -->
